--- a/public/index.html
+++ b/public/index.html
@@ -32,5 +32,6 @@
         text-align: center;
       }
       </style>
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
